# resources/views/mail/smsru.blade.php
@@ -1,0 +1,3 @@
+Новый заказ: Имя: {{ $data['owner_name'] }} (Питомец: {{ $data['pet_name'] }}), звонить {{ $data['phone'] }}. Комментарий: {{ $data['comment'] }}
+Подробнее в приложении GroomerCRM
+
